- Alterações na obtenção da matrícula do prestador de serviço e do cliente final. - Itens sem utilização para a versão acordada estão depreciados e futuramente serão removidos.

--- a/WebContent/buscacliente.xhtml
+++ b/WebContent/buscacliente.xhtml
@@ -46,7 +46,7 @@
                             <h:outputText value="#{cliente.inscricaoFederal}" />
                         </p:column>
                         <p:column headerText="Matrícula">
-                            <h:outputText value="#{cliente.matriculaFinal}" />
+                            <h:outputText value="#{cliente.idClienteFinal}" />
                         </p:column>
                         <p:column style="width:32px;text-align: center">
                             <p:commandButton action="#{clienteFinalMB.abrirCliente}"
