--- a/WebContent/dadoscliente.xhtml
+++ b/WebContent/dadoscliente.xhtml
@@ -23,7 +23,7 @@
 
                     <h:outputLabel value="Matrícula:" style="font-weight:bold" />
                     <h:outputLabel
-                        value="#{clienteFinalMB.clienteSelecionado.matriculaFinal}" />
+                        value="#{clienteFinalMB.clienteSelecionado.idClienteFinal}" />
 
                     <h:outputLabel value="Razão Social:" style="font-weight:bold" />
                     <h:outputLabel
