--- a/WebContent/dadosusuario.xhtml
+++ b/WebContent/dadosusuario.xhtml
@@ -68,6 +68,60 @@
 
             <p:separator />
 
+            <h:form id="formPulseira">
+                <p:panel header="Pulseira"
+                         style="margin-bottom:5px;">
+
+                    <h:panelGrid columns="2" cellpadding="10">
+
+                        <h:outputLabel value="Código Identificador:" style="font-weight:bold" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                        <h:outputLabel value="#{clienteFinalMB.pulseira.codigoIdentificador}" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+
+                        <h:outputLabel value="Liberada para uso:" style="font-weight:bold" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                        <h:outputLabel value="#{clienteFinalMB.pulseira.status}" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+
+                    </h:panelGrid>
+
+
+                    <p:commandButton title="Alterar pulseira"
+                                     icon="ui-icon-pencil" onclick="alterarPulseira.show()" ajax="true" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                    <p:commandButton title="Excluir" icon="ui-icon-trash"
+                                     onclick="confirmarExcluirPulseira.show()" ajax="true" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                    <p:commandButton title="Inserir pulseira"
+                                     icon="ui-icon-plus" onclick="alterarPulseira.show()" ajax="true" rendered="#{clienteFinalMB.pulseira.idPulseira == 0}"/>
+
+
+                </p:panel>
+
+                <p:dialog header="Dados da Pulseira"
+                          widgetVar="alterarPulseira" modal="true" showEffect="fade"
+                          hideEffect="fade" resizable="false">
+                    <h:panelGrid columns="2" cellpadding="5">
+
+                        <h:outputLabel for="codigo" value="Código Identificador" />
+                        <p:inputText id="codigo"
+                                     value="#{clienteFinalMB.pulseira.codigoIdentificador}"
+                                     required="true" />
+
+                        <h:outputLabel for="liberadaUso" value="Liberada para uso:" />
+                        <p:selectBooleanCheckbox id="liberada"
+                                                 value="#{clienteFinalMB.pulseira.liberadaUso}"
+                                                 required="true" />
+
+                    </h:panelGrid>
+
+
+                    <p:commandButton title="Salvar" value="Salvar alterações"
+                                     oncomplete="alterarPrestador.hide();"
+                                     actionListener="#{clienteFinalMB.manterPulseira}"
+                                     update=":formUsuario:growl :formPulseira" ajax="true" />
+
+                </p:dialog>
+
+            </h:form> 
+
+            <p:separator />
+
             <h:form id="formPrestador">
                 <p:panel header="Prestadores de Socorro"
                          style="margin-bottom:5px;">
@@ -80,11 +134,8 @@
                             <p:column headerText="Matrícula">
                                 <h:outputText value="#{prestador.idPrestadorSocorro}" />
                             </p:column>
-                            <p:column headerText="CNPJ">
-                                <h:outputText value="#{prestador.inscricaoFederal}" />
-                            </p:column>
-                            <p:column headerText="Inc. Estadual">
-                                <h:outputText value="#{prestador.inscricaoEstadual}" />
+                            <p:column headerText="Nome">
+                                <h:outputText value="#{prestador.nome}" />
                             </p:column>
                             <p:column headerText="Telefone">
                                 <h:outputText value="#{prestador.telefone}" />
@@ -116,14 +167,9 @@
                           hideEffect="fade" resizable="false">
                     <h:panelGrid columns="2" cellpadding="5">
 
-                        <h:outputLabel for="inscFederal" value="Inscrição Federal" />
-                        <p:inputText id="inscFederal"
-                                     value="#{clienteFinalMB.prestadorSelecionado.inscricaoFederal}"
-                                     required="true" />
-
-                        <h:outputLabel for="inscEstadual" value="Inscrição Estadual" />
-                        <p:inputText id="inscEstadual"
-                                     value="#{clienteFinalMB.prestadorSelecionado.inscricaoEstadual}"
+                        <h:outputLabel for="inscFederal" value="Nome" />
+                        <p:inputText id="nome"
+                                     value="#{clienteFinalMB.prestadorSelecionado.nome}"
                                      required="true" />
 
                         <h:outputLabel for="telefone" value="Telefone" />
@@ -182,6 +228,18 @@
                                  oncomplete="confirmarExcluirPrestador.hide();" />
                 <p:commandButton id="btnNao" value="Não"
                                  onclick="confirmarExcluirPrestador.hide()" type="button" />
+            </p:confirmDialog>
+        </h:form>
+        <h:form id="excluirPulseira">
+            <p:confirmDialog
+                message="Deseja realmente excluir esta Pulseira? Esta ação não poderá ser desfeita."
+                hideEffect="explode" header="Aviso" severity="alert"
+                widgetVar="confirmarExcluirPulseira">
+                <p:commandButton id="btnSim" value="Sim"
+                                 actionListener="#{clienteFinalMB.excluirPulseira}"
+                                 oncomplete="confirmarExcluirPulseira.hide();" />
+                <p:commandButton id="btnNao" value="Não"
+                                 onclick="confirmarExcluirPulseira.hide()" type="button" />
             </p:confirmDialog>
         </h:form>
     </h:body>
