--- a/WebContent/dadosusuario.xhtml
+++ b/WebContent/dadosusuario.xhtml
@@ -12,7 +12,8 @@
             <p:menuitem value="Home" title="Página principal" url="/home.xhtml" />
             <p:menuitem value="Registros" url="/registro.xhtml" />
             <p:menuitem value="Clientes" url="/buscacliente.xhtml" />
-            <p:menuitem value="Novo Cliente" url="/novocliente.xhtml" />
+            <p:menuitem value="Prestadores de Socorro" url="/buscaprestador.xhtml" />
+            <p:menuitem value="Pulseiras" url="/buscapulseira.xhtml" />
         </p:breadCrumb>
         <p:panel id="painelUsuario" header="Usuario"
                  style="margin-bottom:10px;">
@@ -21,13 +22,13 @@
                 <h:panelGrid columns="2" cellpadding="10">
 
                     <h:outputLabel value="Nome:" style="font-weight:bold" />
-                    <h:outputLabel value="#{clienteFinalMB.usuarioSelecionado.nome}" />
+                    <h:outputLabel value="#{clienteFinalBean.usuarioSelecionado.nome}" />
 
                     <h:outputLabel value="CPF:" style="font-weight:bold" />
-                    <h:outputLabel value="#{clienteFinalMB.usuarioSelecionado.cpf}" />
+                    <h:outputLabel value="#{clienteFinalBean.usuarioSelecionado.cpf}" />
 
                     <h:outputLabel value="RG:" style="font-weight:bold" />
-                    <h:outputLabel value="#{clienteFinalMB.usuarioSelecionado.rg}" />
+                    <h:outputLabel value="#{clienteFinalBean.usuarioSelecionado.rg}" />
 
                 </h:panelGrid>
 
@@ -44,22 +45,22 @@
 
                         <h:outputLabel for="nome" value="Nome:" />
                         <p:inputText id="nome"
-                                     value="#{clienteFinalMB.usuarioSelecionado.nome}" required="true" />
+                                     value="#{clienteFinalBean.usuarioSelecionado.nome}" required="true" />
 
                         <h:outputLabel for="cpf" value="CPF:" />
                         <p:inputText id="cpf"
-                                     value="#{clienteFinalMB.usuarioSelecionado.cpf}" required="true" />
+                                     value="#{clienteFinalBean.usuarioSelecionado.cpf}" required="true" />
 
                         <h:outputLabel for="rg" value="RG" />
                         <p:inputText id="rg"
-                                     value="#{clienteFinalMB.usuarioSelecionado.rg}" required="true" />
+                                     value="#{clienteFinalBean.usuarioSelecionado.rg}" required="true" />
 
 
                     </h:panelGrid>
 
                     <p:commandButton title="Salvar" value="Salvar alterações"
                                      oncomplete="alterarUsuario.hide();"
-                                     actionListener="#{clienteFinalMB.alterarUsuario}"
+                                     actionListener="#{clienteFinalBean.alterarUsuario}"
                                      update=":formUsuario" />
 
                 </p:dialog>
@@ -74,21 +75,21 @@
 
                     <h:panelGrid columns="2" cellpadding="10">
 
-                        <h:outputLabel value="Código Identificador:" style="font-weight:bold" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
-                        <h:outputLabel value="#{clienteFinalMB.pulseira.codigoIdentificador}" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                        <h:outputLabel value="Código Identificador:" style="font-weight:bold" rendered="#{clienteFinalBean.pulseiraSelecionada.idPulseira != 0}"/>
+                        <h:outputLabel value="#{clienteFinalBean.pulseiraSelecionada.codigoIdentificador}" rendered="#{clienteFinalBean.pulseiraSelecionada.idPulseira != 0}"/>
 
-                        <h:outputLabel value="Liberada para uso:" style="font-weight:bold" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
-                        <h:outputLabel value="#{clienteFinalMB.pulseira.status}" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                        <h:outputLabel value="Liberada para uso:" style="font-weight:bold" rendered="#{clienteFinalBean.pulseiraSelecionada.idPulseira != 0}"/>
+                        <h:outputLabel value="#{clienteFinalBean.pulseiraSelecionada.status}" rendered="#{clienteFinalBean.pulseiraSelecionada.idPulseira != 0}"/>
 
                     </h:panelGrid>
 
 
                     <p:commandButton title="Alterar pulseira"
-                                     icon="ui-icon-pencil" onclick="alterarPulseira.show()" ajax="true" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                                     icon="ui-icon-pencil" onclick="alterarPulseira.show()" ajax="true" rendered="#{clienteFinalBean.pulseiraSelecionada.idPulseira != 0}"/>
                     <p:commandButton title="Excluir" icon="ui-icon-trash"
-                                     onclick="confirmarExcluirPulseira.show()" ajax="true" rendered="#{clienteFinalMB.pulseira.idPulseira != 0}"/>
+                                     onclick="confirmarExcluirPulseira.show()" ajax="true" rendered="#{clienteFinalBean.pulseiraSelecionada.idPulseira != 0}"/>
                     <p:commandButton title="Inserir pulseira"
-                                     icon="ui-icon-plus" onclick="alterarPulseira.show()" ajax="true" rendered="#{clienteFinalMB.pulseira.idPulseira == 0}"/>
+                                     icon="ui-icon-plus" onclick="alterarPulseira.show()" ajax="true" rendered="#{clienteFinalBean.pulseiraSelecionada.idPulseira == 0}"/>
 
 
                 </p:panel>
@@ -100,12 +101,12 @@
 
                         <h:outputLabel for="codigo" value="Código Identificador" />
                         <p:inputText id="codigo"
-                                     value="#{clienteFinalMB.pulseira.codigoIdentificador}"
+                                     value="#{clienteFinalBean.pulseiraSelecionada.codigoIdentificador}"
                                      required="true" />
 
                         <h:outputLabel for="liberadaUso" value="Liberada para uso:" />
                         <p:selectBooleanCheckbox id="liberada"
-                                                 value="#{clienteFinalMB.pulseira.liberadaUso}"
+                                                 value="#{clienteFinalBean.pulseiraSelecionada.liberadaUso}"
                                                  required="true" />
 
                     </h:panelGrid>
@@ -113,7 +114,7 @@
 
                     <p:commandButton title="Salvar" value="Salvar alterações"
                                      oncomplete="alterarPrestador.hide();"
-                                     actionListener="#{clienteFinalMB.manterPulseira}"
+                                     actionListener="#{clienteFinalBean.manterPulseira}"
                                      update=":formUsuario:growl :formPulseira" ajax="true" />
 
                 </p:dialog>
@@ -130,7 +131,7 @@
                     <p:outputPanel id="painelTabelaPrestadores">
 
                         <p:dataTable id="tabelaPrestadores"
-                                     value="#{clienteFinalMB.listaPrestadores}" var="prestador">
+                                     value="#{clienteFinalBean.listaPrestadores}" var="prestador">
                             <p:column headerText="Matrícula">
                                 <h:outputText value="#{prestador.idPrestadorSocorro}" />
                             </p:column>
@@ -146,13 +147,13 @@
                                                  icon="ui-icon-pencil" onclick="alterarPrestador.show()"
                                                  ajax="false">
                                     <f:setPropertyActionListener value="#{prestador}"
-                                                                 target="#{clienteFinalMB.prestadorSelecionado}" />
+                                                                 target="#{clienteFinalBean.prestadorSelecionado}" />
                                 </p:commandButton>
 
                                 <p:commandButton title="Excluir" icon="ui-icon-trash"
                                                  onclick="confirmarExcluirPrestador.show()" ajax="true"  >
                                     <f:setPropertyActionListener value="#{prestador}"
-                                                                 target="#{clienteFinalMB.prestadorSelecionado}" />
+                                                                 target="#{clienteFinalBean.prestadorSelecionado}" />
                                 </p:commandButton>
 
                             </p:column>
@@ -169,12 +170,12 @@
 
                         <h:outputLabel for="inscFederal" value="Nome" />
                         <p:inputText id="nome"
-                                     value="#{clienteFinalMB.prestadorSelecionado.nome}"
+                                     value="#{clienteFinalBean.prestadorSelecionado.nome}"
                                      required="true" />
 
                         <h:outputLabel for="telefone" value="Telefone" />
                         <p:inputText id="telefone"
-                                     value="#{clienteFinalMB.prestadorSelecionado.telefone}"
+                                     value="#{clienteFinalBean.prestadorSelecionado.telefone}"
                                      required="true" />
 
                     </h:panelGrid>
@@ -182,7 +183,7 @@
 
                     <p:commandButton title="Salvar" value="Salvar alterações"
                                      oncomplete="alterarPrestador.hide();"
-                                     actionListener="#{clienteFinalMB.manterPrestador}"
+                                     actionListener="#{clienteFinalBean.manterPrestador}"
                                      update=":formUsuario:growl :formPrestador:tabelaPrestadores" ajax="true" />
 
                 </p:dialog>
@@ -211,7 +212,7 @@
                 hideEffect="explode" header="Aviso" severity="alert"
                 widgetVar="confirmarExcluirUsuario">
                 <p:commandButton id="btnSim" value="Sim"
-                                 actionListener="#{clienteFinalMB.excluirUsuario}"
+                                 actionListener="#{clienteFinalBean.excluirUsuario}"
                                  oncomplete="confirmarExcluirUsuario.hide();" />
                 <p:commandButton id="btnNao" value="Não"
                                  onclick="confirmarExcluirUsuario.hide()" type="button" />
@@ -224,7 +225,7 @@
                 hideEffect="explode" header="Aviso" severity="alert"
                 widgetVar="confirmarExcluirPrestador">
                 <p:commandButton id="btnSim" value="Sim"
-                                 actionListener="#{clienteFinalMB.excluirPrestador}"
+                                 actionListener="#{clienteFinalBean.excluirPrestador}"
                                  oncomplete="confirmarExcluirPrestador.hide();" />
                 <p:commandButton id="btnNao" value="Não"
                                  onclick="confirmarExcluirPrestador.hide()" type="button" />
@@ -236,7 +237,7 @@
                 hideEffect="explode" header="Aviso" severity="alert"
                 widgetVar="confirmarExcluirPulseira">
                 <p:commandButton id="btnSim" value="Sim"
-                                 actionListener="#{clienteFinalMB.excluirPulseira}"
+                                 actionListener="#{clienteFinalBean.excluirPulseira}"
                                  oncomplete="confirmarExcluirPulseira.hide();" />
                 <p:commandButton id="btnNao" value="Não"
                                  onclick="confirmarExcluirPulseira.hide()" type="button" />
