--- a/WebContent/dicaobjeto.xhtml
+++ b/WebContent/dicaobjeto.xhtml
@@ -3,6 +3,10 @@
     <div style="font-size: 12px; background-color: #FFF; width:200px; color:#444">
         <span style="text-transform: uppercase;font-size: 14px; color:#7b98bc"><b>${requestScope.nomeUsuario}</b></span><br/>
         Código da Pulseira: ${requestScope.codigoPulseira}<br/>
+        Temperatura: ${requestScope.temperatura}ºC<br/>
+        Batimentos:  ${requestScope.batimentos} bpm<br/>
+        Queda: ${requestScope.queda}<br/>
+        Pedido de Socorro: ${requestScope.socorro}<br/>
         Localização: ${requestScope.coordenadaGeografica}<br/>
         Atualizado em: ${requestScope.horarioAtualizacao}<br/>
         <br/>
